[fix] spacing not right.

--- a/src/components/SideBar/helpers/Header/Header.sass
+++ b/src/components/SideBar/helpers/Header/Header.sass
@@ -5,3 +5,4 @@
 
   &__icon-container
     margin-left: auto
+    margin-right: -1.3em
